# be/swagger/v1/swagger.yaml
@@ -3,10 +3,19 @@ openapi: 3.0.1
 info:
   title: API V1
   version: v1
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      in: header
+      name: Authorization
 paths:
   "/api/auth/login":
     post:
       summary: login authentication
+      tags:
+      - Authentication
       parameters: []
       responses:
         '200':
@@ -26,6 +35,106 @@ paths:
               required:
               - email
               - password
+  "/api/carts":
+    get:
+      summary: get all products inside user cart
+      tags:
+      - Carts
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: successful
+        '401':
+          description: unauthorized
+  "/api/carts/add":
+    post:
+      summary: add item to cart
+      tags:
+      - Carts
+      security:
+      - bearerAuth: []
+      parameters: []
+      responses:
+        '200':
+          description: bad request
+        '401':
+          description: unauthorized
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                product_id:
+                  type: string
+              required:
+              - product_id
+  "/api/carts/deduct":
+    post:
+      summary: remove item from cart
+      tags:
+      - Carts
+      security:
+      - bearerAuth: []
+      parameters: []
+      responses:
+        '200':
+          description: bad request
+        '401':
+          description: unauthorized
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                product_id:
+                  type: string
+              required:
+              - product_id
+  "/api/carts/checkout":
+    delete:
+      summary: add to cart
+      tags:
+      - Carts
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: successful
+        '401':
+          description: unauthorized
+  "/api/categories":
+    get:
+      summary: list all categories
+      tags:
+      - Categories
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: successful
+        '401':
+          description: unauthorized
+  "/api/products":
+    get:
+      summary: list all products
+      tags:
+      - Products
+      security:
+      - bearerAuth: []
+      parameters:
+      - name: category_id
+        in: query
+        required: false
+        schema:
+          type: string
+      responses:
+        '200':
+          description: successful
+        '401':
+          description: unauthorized
 servers:
 - url: "{defaultHost}"
   variables:
